# AIMA-CPP

./: .gitignore  AIMA.pro  Attribute.cpp  Attribute.hpp  Attributes.cpp  Attributes.hpp  CMakeLists.txt  DecisionTree.cpp  DecisionTree.hpp  Example.cpp  Example.hpp  ExamplesLearning.cpp  ExamplesLearning.hpp  Makefile  Maketests  ManualTest.cpp  README.md  Template And Planning.txt
DecisionTree/: Attribute.cpp  Attribute.hpp  DecisionTree.hpp
LearnerModel/: .DecisionTree.hpp.swp  DecisionTree.cpp  DecisionTree.hpp  Example.hpp
datasets/: restaurant.csv
gui/: AIMA.cpp  AIMAGUI.cpp  Window.cpp
include/: AIMAGUI.hpp  ANN.hpp  Attribute.hpp  DataSet.hpp  DecisionTree.hpp  Example.hpp  ExamplesLearning.hpp  NeuralNetwork.hpp
src/: ANN.cpp  Attribute.cpp  DataSet.cpp  DecisionTree.cpp  Example.cpp  ExamplesLearning.cpp  NeuralNetwork.cpp
src/aima/: ANN.cpp  CMakeLists.txt  DataSet.cpp  DecisionTree.cpp  Example.cpp  ExamplesLearning.cpp
src/app/: AIMA.cpp
src/gui/: AIMA.cpp  AIMAGUI.cpp  CMakeLists.txt
test/: AIMATests.cpp
tests/: AIMATests.cpp  ANNTests.cpp  DataSetTests.cpp
