cmake_minimum_required(VERSION 3.16)

project(AIMA-CPP VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Core Widgets)
qt_standard_project_setup()

add_executable(AIMA-CPP
    gui/AIMAGUI.cpp
)

target_link_libraries(AIMA-CPP PRIVATE Qt6::Core Qt6::Widgets)
